CR-2002-12-05-0  Bugfix:    Used wrong macro (SFQ) for fixing messages macros 
                            in commit CR-2002-12-03-1

CR-2002-12-04-0  Testsuite: Running more than one testsuite on the same host
                 Bugfix:    causes problems, because both testsuites will use
                            same files in local /tmp directory
                            - new procedures: get_tmp_directory_name() and
                                              get_tmp_file_name()

EB-2002-12-04-1  Testsuite: Fixed bug in checktree/functional/binary_submission

CR-2002-12-03-1  L10N:      Modified messages for spool files. 
                            The "#" (comment start) sign should not belong to 
                            l10n message.

CR-2002-12-03-0  Testsuite: a) Bugfix: procedure del_access_list()
                            b) Added new error handling for submit_job() 
                               (error open file) The error handling is used by 
                               binary_submission test.

CR-2002-12-02-2  Testsuite: a) test job_environment:
                               report only warning for JOB_NAME bug if version
                               is <= 5.3p2
                            b) removed qrsh_trap test from qrsh test

CR-2002-12-02-1  Testsuite: a) setting default configuration max_unheard to
                               00:01:00
                            b) new procedure: soft_execd_shutdown() 

CR-2002-12-02-0  Testsuite: a) Removed unused, duplicate message macro from 
                               source
                            b) Removed wait_for_enter() call in submit_del test
                               after pass2 (blocked automatic testsuite run)

CR-2002-11-29-1  Testsuite: L10N bugfixes

CR-2002-11-29-0  Testsuite: a) using testsuite root directory for lockfile, not
                 Bugfix:       testsuite results directory.
                            b) get_version_info() may not reset 